; ModuleID = '/home/carl/AnghaBench/libgit2/tests/network/extr_refspecs.c_assert_refspec.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/network/extr_refspecs.c_assert_refspec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_DIRECTION_FETCH = common dso_local global i32 0, align 4
@GIT_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i32)* @assert_refspec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_refspec(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @GIT_DIRECTION_FETCH, align 4
  %12 = icmp eq i32 %10, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @git_refspec__parse(i32* %7, i8* %9, i32 %13)
  store i32 %14, i32* %8, align 4
  %15 = call i32 @git_refspec__dispose(i32* %7)
  %16 = load i32, i32* %6, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %3
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @cl_assert_equal_i(i32 0, i32 %19)
  br label %25

21:                                               ; preds = %3
  %22 = load i32, i32* @GIT_ERROR, align 4
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @cl_assert_equal_i(i32 %22, i32 %23)
  br label %25

25:                                               ; preds = %21, %18
  ret void
}

declare dso_local i32 @git_refspec__parse(i32*, i8*, i32) #1

declare dso_local i32 @git_refspec__dispose(i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
